[package]
name = "phantom-zone-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
phantom-zone-crypto = { path = "../crypto" }
phantom-zone-evaluator = { path = "../evaluator", features = ["serde"] }
phantom-zone-math = { path = "../math" }
